# monad_bot

./: .gitignore  READMD.md
bot_rs/: .env.example  Cargo.toml  Makefile
bot_rs/contract/: abi.json
bot_rs/src/: analyzer.rs  lib.rs  main.rs  types.rs
docs/migration_plan/: 01_core_module.md  02_transaction_flow.md  03_directory_structure.md  04_dependencies.md
docs/prompts/: code_standards.md  overview.md
